--- a/demo/h2-form/index.html
+++ b/demo/h2-form/index.html
@@ -15,6 +15,7 @@
     import '../../h2-form.js';
     import '../../h2-input.js';
     import '../../h2-button.js';
+    import '../../h2-cascading.js'
     if (!window.location.href.endsWith("?mock=formMockData.js")) {
       window.location.href = window.location.href + "?mock=formMockData.js";
     }
@@ -70,9 +71,10 @@
         <h2-input class="form-input" label="年龄" name="age" type="number" required="" min="10" max="20"
                   prompt="年龄介乎10到20之间"></h2-input>
         <h2-button slot="form-btn" form-submit="">提交</h2-button>
+        <h2-cascading label="测试" tree-items="[[treeItems]]"></h2-cascading>
       </h2-form>
       <script type="module">
-        import {TipBehavior} from "../../behaviors/tip-behavior";
+        import {TipBehavior} from "../../behaviors/tip-behavior.js";
         form.addEventListener('submitted', e => {
           console.log('submitted', e);
         });
