--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0;url=demo/" />
-    <title>my-el</title>
+    <meta http-equiv="refresh"/>
+    <title>isuwang-element</title>
+    <script type="module">
+      import '@polymer/iron-component-page/iron-component-page.js';
+    </script>
   </head>
   <body>
     <!--
@@ -11,5 +14,6 @@
         This page will automatically redirect you there when run in the browser
         with `polymer serve`.
       -->
+    <iron-component-page src="all-imports.html"></iron-component-page>
   </body>
 </html>
