--- a/demo/index.html
+++ b/demo/index.html
@@ -134,7 +134,7 @@
         <h2-button id="btn3" onclick="tip3.open(5000);" size="large">Error</h2-button>
         <h2-cascading id="cascading" label="层叠"></h2-cascading>
 
-        <h2-edit-table label="可修改表格"></h2-edit-table>
+        <h2-picker></h2-picker>
       </h2-grid-layout>
       <h2-dialog id="dialog" stop-auto-dismiss>
         <div>
