--- a/demo/h2-image-upload/index.html
+++ b/demo/h2-image-upload/index.html
@@ -47,6 +47,33 @@ document.body.appendChild($_documentContainer.content);
     </template>
   </demo-snippet>
 
+  <h3>View mode</h3>
+  <demo-snippet>
+    <template>
+      <custom-style>
+        <style>
+        </style>
+      </custom-style>
+      <h2-image-upload id="uploaderView" label="上河图" type="view" src="https://d1.awsstatic.com/product-marketing/Elastic%20Beanstalk/ElasticBeanstalk_Benefit_Productivity.5cd0e6aedfa2e3b2c05ed7f5faeb0fd215c9742b.png"></h2-image-upload>
+    </template>
+  </demo-snippet>
+
+  <h3>Size</h3>
+  <demo-snippet>
+    <template>
+      <custom-style>
+        <style>
+        </style>
+      </custom-style>
+      <h2-image-upload id="uploaderView" label="Large Picture" type="view" size="large"
+                       src="https://d1.awsstatic.com/product-marketing/Elastic%20Beanstalk/ElasticBeanstalk_Benefit_Productivity.5cd0e6aedfa2e3b2c05ed7f5faeb0fd215c9742b.png"></h2-image-upload>
+      <h2-image-upload id="uploaderView" label="Normal Picture" type="view"
+                       src="https://d1.awsstatic.com/product-marketing/Elastic%20Beanstalk/ElasticBeanstalk_Benefit_Productivity.5cd0e6aedfa2e3b2c05ed7f5faeb0fd215c9742b.png"></h2-image-upload>
+      <h2-image-upload id="uploaderView" label="Small Picture" type="view" size="small"
+                       src="https://d1.awsstatic.com/product-marketing/Elastic%20Beanstalk/ElasticBeanstalk_Benefit_Productivity.5cd0e6aedfa2e3b2c05ed7f5faeb0fd215c9742b.png"></h2-image-upload>
+    </template>
+  </demo-snippet>
+
   <h3>Custom style</h3>
   <demo-snippet>
     <template>
