--- a/demo/h2-checkbox-group/index.html
+++ b/demo/h2-checkbox-group/index.html
@@ -72,6 +72,23 @@
     </template>
   </demo-snippet>
 
+  <h3>Disable part checkbox</h3>
+  <demo-snippet>
+    <template>
+      <custom-style>
+      </custom-style>
+      <h2-checkbox-group id="checkboxDisable" label="材料" value="0"></h2-checkbox-group>
+      <script>
+        checkboxDisable.items = [
+          {label: '薄膜', value: 0},
+          {label: '纤维', value: 1},
+          {label: '塑料', value: 2, disabled: true},
+          {label: '其它', value: 3, disabled: true}
+        ];
+      </script>
+    </template>
+  </demo-snippet>
+
   <h3>Required checkbox</h3>
   <demo-snippet>
     <template>
@@ -82,6 +99,44 @@
       <h2-checkbox-group id="checkbox2" label="材料" required=""></h2-checkbox-group>
       <script>
         checkbox2.items = [
+          {label: '薄膜', value: 0},
+          {label: '纤维', value: 1},
+          {label: '塑料', value: 2},
+          {label: '其它', value: 3}
+        ];
+      </script>
+    </template>
+  </demo-snippet>
+
+  <h3>Min checkbox && Max checkbox</h3>
+  <demo-snippet>
+    <template>
+      <custom-style>
+        <style is="custom-style">
+        </style>
+      </custom-style>
+      <h2-checkbox-group id="checkboxNum" label="材料" min="1" max="3"></h2-checkbox-group>
+      <script>
+        checkboxNum.items = [
+          {label: '薄膜', value: 0},
+          {label: '纤维', value: 1},
+          {label: '塑料', value: 2},
+          {label: '其它', value: 3}
+        ];
+      </script>
+    </template>
+  </demo-snippet>
+
+  <h3>Border</h3>
+  <demo-snippet>
+    <template>
+      <custom-style>
+        <style is="custom-style">
+        </style>
+      </custom-style>
+      <h2-checkbox-group id="checkboxBorder" label="材料" border></h2-checkbox-group>
+      <script>
+        checkboxBorder.items = [
           {label: '薄膜', value: 0},
           {label: '纤维', value: 1},
           {label: '塑料', value: 2},
