--- a/demo/h2-input/index.html
+++ b/demo/h2-input/index.html
@@ -51,10 +51,10 @@
           }
         </style>
       </custom-style>
-      <h2-input class="typed-input" label="文本框" placeholder="Please input something..."></h2-input>
-      <h2-input class="typed-input" label="数字框" type="number" required="" min="10" max="20" prompt="请输入10到20之间的数字"></h2-input>
-      <h2-input class="typed-input" label="电话" type="tel" maxlength="11"></h2-input>
-      <h2-input class="typed-input" label="密码框" type="password"></h2-input>
+      <h2-input class="typed-input" label="文本框" placeholder="Please input something..." clearable></h2-input>
+      <h2-input class="typed-input" label="数字框" type="number" required min="10" max="20" prompt="请输入10到20之间的数字"></h2-input>
+      <h2-input class="typed-input" label="电话" type="tel" maxlength="11" allowed-pattern="^1[3456789]\d{9}$" prompt="电话格式输入有误"></h2-input>
+      <h2-input class="typed-input" label="密码框" type="password" show-password></h2-input>
       <h2-input class="typed-input" label="颜色框" type="color"></h2-input>
       <h2-input class="typed-input" label="日期框" type="date"></h2-input>
       <h2-input class="typed-input" label="日期时间框" type="datetime-local"></h2-input>
