--- a/demo/h2-picker/index.html
+++ b/demo/h2-picker/index.html
@@ -53,8 +53,9 @@ document.body.appendChild($_documentContainer.content);
   <h3>支持单选、多选、输入关键字过滤下拉选项</h3>
   <demo-snippet>
     <template>
-      <h2-picker id="picker" label="单选" mode="text" text="99" attr-for-value="id" placeholder="请选择"></h2-picker>
+      <h2-picker id="picker" label="单选" mode="text" text="99" attr-for-value="id" placeholder="请选择" clearable></h2-picker>
       <h2-picker id="picker1" label="多选" value="1,2,3,4" attr-for-value="id" multi placeholder="请选择" picker-meta='[{"field": "label", "label": "选项"}, {"field": "business", "label": "业务范围"}]'></h2-picker>
+      <h2-picker id="pickerAll" label="多选" value="1,2,3,4" attr-for-value="id" show-all multi placeholder="请选择" picker-meta='[{"field": "label", "label": "选项"}, {"field": "business", "label": "业务范围"}]'></h2-picker>
       <script>
         const items = [
           {"id": 1, "label": "天猫", "business": "塑料", "tags": ["ksw", "sl"]},
@@ -114,6 +115,10 @@ document.body.appendChild($_documentContainer.content);
         picker1.attrForLabel = "label";
         picker1.shortcutKey = ' ';
         picker1.items = items;
+
+        pickerAll.attrForLabel = "label";
+        pickerAll.shortcutKey = ' ';
+        pickerAll.items = items;
       </script>
     </template>
   </demo-snippet>
