--- a/demo/h2-picker/index.html
+++ b/demo/h2-picker/index.html
@@ -55,7 +55,8 @@ document.body.appendChild($_documentContainer.content);
     <template>
       <h2-picker id="picker" label="单选" mode="text" text="99" attr-for-value="id" placeholder="请选择" clearable></h2-picker>
       <h2-picker id="picker1" label="多选" value="1,2,3,4" attr-for-value="id" multi placeholder="请选择" picker-meta='[{"field": "label", "label": "选项"}, {"field": "business", "label": "业务范围"}]'></h2-picker>
-      <h2-picker id="pickerAll" label="多选" value="1,2,3,4" attr-for-value="id" show-all multi placeholder="请选择" picker-meta='[{"field": "label", "label": "选项"}, {"field": "business", "label": "业务范围"}]'></h2-picker>
+      <h2-picker id="pickerAll" label="多选" value="1,2,3,4" attr-for-value="id" show-all
+                 multi placeholder="请选择" picker-meta='[{"field": "label", "label": "选项"}, {"field": "business", "label": "业务范围"}]'></h2-picker>
       <script>
         const items = [
           {"id": 1, "label": "天猫", "business": "塑料", "tags": ["ksw", "sl"]},
@@ -110,6 +111,7 @@ document.body.appendChild($_documentContainer.content);
         picker.attrForLabel = ({category, designation, manufacturerName}) => `${category} | ${designation} | ${manufacturerName}`;
         picker.shortcutKey = ' ';
         picker.pickerMeta = productPickerMeta;
+        picker.fieldsForIndex = ['category', 'designation', 'manufacturerName', 'originCountry'];
         picker.items = products;
 
         picker1.attrForLabel = "label";
@@ -118,16 +120,18 @@ document.body.appendChild($_documentContainer.content);
 
         pickerAll.attrForLabel = "label";
         pickerAll.shortcutKey = ' ';
+        // pickerAll.fieldsForIndex = ['label', 'business'];
         pickerAll.items = items;
       </script>
     </template>
   </demo-snippet>
 
-  <h3>支持只读、必填、快捷键属性</h3>
+  <h3>支持只读、必填、快捷键属性,可限制多选的数量</h3>
   <demo-snippet>
     <template>
       <h2-picker id="picker3" label="公司" value="1,2,3" attr-for-value="id" multi readonly></h2-picker>
       <h2-picker id="picker4" label="公司" value="1,2,3" attr-for-value="id" multi required enable-hotkey></h2-picker>
+      <h2-picker id="pickerNum" label="公司"  attr-for-value="id" multi-limit="3" multi required enable-hotkey></h2-picker>
       <script>
         const pickerMeta = [{field: 'label', label: '选项'}, {field: 'business', label: '业务范围'}];
         picker3.pickerMeta = pickerMeta;
@@ -135,6 +139,9 @@ document.body.appendChild($_documentContainer.content);
         
         picker4.pickerMeta = pickerMeta;
         picker4.items = items;
+
+        pickerNum.pickerMeta = pickerMeta;
+        pickerNum.items = items;
       </script>
     </template>
   </demo-snippet>
@@ -248,6 +255,7 @@ document.body.appendChild($_documentContainer.content);
       </script>
     </template>
   </demo-snippet>
+
 </div>
 
 </body>
