--- a/demo/h2-select/index.html
+++ b/demo/h2-select/index.html
@@ -41,6 +41,7 @@ document.body.appendChild($_documentContainer.content);
     <template>
       <h2-select id="select" label="球员" placeholder="选择球员" value="1" required></h2-select>
       <h2-select id="select1" label="球员" placeholder="选择球员" multi="" value="1, 2, 3, 4"></h2-select>
+      <h2-select id="selectShow" label="球员" placeholder="选择球员" multi="" show-all value="1, 2, 3, 4"></h2-select>
       <script>
         const items = [
           {"label": "梅西", "value": 1},
@@ -53,19 +54,22 @@ document.body.appendChild($_documentContainer.content);
         ];
         select.items = items;
         select1.items = items;
+        selectShow.items = items;
 
       </script>
     </template>
   </demo-snippet>
 
-  <h3>Readonly &amp; required</h3>
+  <h3>Readonly &amp; required &amp; multi-limit</h3>
   <demo-snippet>
     <template>
       <h2-select id="select2" label="球员" placeholder="选择球员" readonly="" value="1"></h2-select>
       <h2-select id="select3" label="球员" placeholder="选择球员" required="" multi=""></h2-select>
+      <h2-select id="selectLimit" label="球员" placeholder="选择球员" required="" multi show-all multi-limit="4"></h2-select>
       <script>
         select2.items = items;
         select3.items = items;
+        selectLimit.items = items;
       </script>
     </template>
   </demo-snippet>
