--- a/demo/h2-table/index.html
+++ b/demo/h2-table/index.html
@@ -335,7 +335,7 @@
               </div>
             </template>
           </h2-table-column>
-          <h2-table-column prop="name" label="名称" width="100"></h2-table-column>
+          <h2-table-column prop="name" label="名称" cell-style="text-align: center" width="100"></h2-table-column>
           <h2-table-column prop="phone" label="电话号码"></h2-table-column>
         </h2-table>
         <h2-pagination id="page1" total="5000" page-sizes='[10,20,30,40]' limit="10"></h2-pagination>
