--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         This page will automatically redirect you there when run in the browser
         with `polymer serve`.
       -->
-    <iron-component-page src="all-imports.html"></iron-component-page>
+    <iron-component-page></iron-component-page>
   </body>
 </html>
