--- a/demo/h2-tree/index.html
+++ b/demo/h2-tree/index.html
@@ -44,7 +44,7 @@
         <style>
         </style>
       </custom-style>
-      <h2-tree id="tree" show-radio require-query>
+      <h2-tree id="tree" show-checkbox require-query accordion>
         <span slot-scope="{ node }" class="dhtceshi">{{ node.label }}</span>
         <template is="dom-if" if="showLevel1">
           showLevel1
@@ -77,52 +77,8 @@
                     label: '三级1第1个',
                     showLevel2:true,
                     children: [
-                      { id: 1, label: '1', children: [
-
-                          {
-                            id: 1,
-                            label: '1-1',
-                            showLevel2:true,
-                            children: [
-                              { id: 1, label: '刘', children: [
-                                  { id: 1, label: '无', children: [
-
-                                      {
-                                        id: 1,
-                                        label: '3-1',
-                                        showLevel2:true,
-                                        children: [
-                                          { id: 1, label: '非', children: [] },
-                                          { id: 2, label: '哈哈', disabled: true, children: [] },
-                                          { id: 3, label: '4-1', children: [] },
-                                          { id: 4, label: '4-2', children: [] },
-                                          { id: 5, label: '三', children: [] }
-                                        ]
-                                      },
-                                      { id: 2, label: '3-2', disabled: true, children: [] },
-                                      { id: 3, label: '3-3', children: [] },
-                                      { id: 4, label: '3-4', children: [] },
-                                      { id: 5, label: '3-5', children: [] }
-
-                                    ] },
-                                  { id: 2, label: '2', disabled: true, children: [] },
-                                  { id: 3, label: '3', children: [] },
-                                  { id: 4, label: '4', children: [] },
-                                  { id: 5, label: '5', children: [] }
-                                ] },
-                              { id: 2, label: '六', disabled: true, children: [] },
-                              { id: 3, label: '2-1', children: [] },
-                              { id: 4, label: '2-2', children: [] },
-                              { id: 5, label: '2-3', children: [] }
-                            ]
-                          },
-                          { id: 2, label: '1-2', disabled: true, children: [] },
-                          { id: 3, label: '1-3', children: [] },
-                          { id: 4, label: '1-4', children: [] },
-                          { id: 5, label: '1-5', children: [] }
-
-                        ] },
-                      { id: 2, label: '2', disabled: true, children: [] },
+                      { id: 1, label: '1', children: [] },
+                      { id: 2, label: '2', disabled: true, checked: true, children: [] },
                       { id: 3, label: '3', children: [] },
                       { id: 4, label: '4', children: [] },
                       { id: 5, label: '5', children: [] }
@@ -142,7 +98,9 @@
           },
           { id: 3, label: '第3个', children: [ {
               id: 1,
-              label: '三级第1个'}] },
+              label: '三级第1个'},{
+              id: 2,
+              label: '三级第2个'}] },
           { id: 4, label: '第4个', children: [] },
           { id: 5, label: '第5个', children: [] }
         ]
