--- a/demo/isu-input-number/index.html
+++ b/demo/isu-input-number/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   
-  <title>h2-input demo</title>
+  <title>isu-input-number demo</title>
   
   <script type="module">
     import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js';
