--- a/demo/isu-picker/index.html
+++ b/demo/isu-picker/index.html
@@ -265,6 +265,7 @@ document.body.appendChild($_documentContainer.content);
         <style>
           #picker11 {
             width: 250px;
+            --isu-ui-red: red;
             --isu-picker-input: {
               background-color: lightpink;
             };
@@ -279,7 +280,7 @@ document.body.appendChild($_documentContainer.content);
             };
             --collapase-table-cell: {
               color: lightgreen;
-            }
+            };
           }
         </style>
       </custom-style>
