添加api和相关注释

--- a/demo/isu-input-jedate/index.html
+++ b/demo/isu-input-jedate/index.html
@@ -101,7 +101,7 @@
         }
       </style>
     </custom-style>
-    <isu-input-jedate class="input-date multi" id="testBlue" label="蓝色主题" format="YYYY-MM-DD hh:mm:ss" theme
+    <isu-input-jedate class="input-date multi" id="testBlue" label="蓝色主题" format="YYYY-MM-DD hh:mm:ss"
                      placeholder="YYYY-MM-DD hh:mm:ss"></isu-input-jedate>
     <script>
       testBlue.theme = {bgcolor:'#00A1CB',pnColor:'#00CCFF'}
