基础组件部分优化

--- a/demo/isu-button-group/index.html
+++ b/demo/isu-button-group/index.html
@@ -86,7 +86,7 @@ document.body.appendChild($_documentContainer.content);
   <h3>Bind click handler</h3>
   <demo-snippet>
     <template>
-      <isu-button-group id="btnGrp2" label="测试" attr-for-label="name" hide-on-click></isu-button-group>
+      <isu-button-group id="btnGrp2" label="测试" attr-for-label="name" hide-items-on-click></isu-button-group>
       <script>
         btnGrp2.items = [
           {name: "测试1", value: "1"},
