--- a/demo/isu-checkbox-group/index.html
+++ b/demo/isu-checkbox-group/index.html
@@ -60,7 +60,7 @@
     <template>
       <custom-style>
       </custom-style>
-      <isu-checkbox-group id="checkbox1" label="材料" value="1, 3" readonly=""></isu-checkbox-group>
+      <isu-checkbox-group id="checkbox1" label="材料" value="1, 3" readonly></isu-checkbox-group>
       <script>
         checkbox1.items = [
           {label: '薄膜', value: 0},
